2005-11-19  Ales Hakl  <ales at hakl dot net>

	* src/repl.c (main): Use dfsch_exception_write() consistently

	* src/dfsch.c (dfsch_eval_proc): Propagate exceptions correctly

	* src/stream.c: Cleaned up vector (and other special values) handling

	* src/native.c: Non-comutative number operators behaves correctly

	* scm/test.scm (condAlt): Updated to match dfsch's notion of booleans

2005-11-18  Ales Hakl  <ales at hakl dot net>

	* src/stream.c (dispatch_string): Hexadecimal string escapes.
	
	* src/stream.c, src/util.c: Include correct header for string functions

	* src/native.c (native_vector_length): Test for datatype
	
2005-11-17  Ales Hakl  <ales at hakl dot net>

	* src/load.c (dfsch_read_scm_*): handle invalid syntax correctly

	* src/dfsch.c (dfsch_list_read): handle invalid syntax correctly

	* src/repl.c (main): Evaluate expression from command line, -i option

	* src/dfsch.c (dfsch_obj_write_exception): Pretty-printing exceptions

	* src/load.c (dfsch_read_scm_*): Detect unclosed S-expressions 

	* src/repl.c (main): dfsch-repl is now usable as interpreter in
	shebang 

	* scm/test.scm: Test for interpreter

	* src/dfsch.c (lambda_extend): FIXED: extending new frames behaved
	wildly 

	* src/hash.c (dfsch_hash_2_alist): Routine for converting hash
	tables into association lists

	* src/repl.c (command_print): Ad-hoc printing mechanism in
	commandline interpreter

	* src/native.c (native_macro_case): "case" construct (see 4.2.1 of
	R5RS) 

	* src/dfsch.c (dfsch_eval_proc): Comment describing ways to
	implement tail-recursion

2005-11-16  Ales Hakl  <ales at hakl dot net>

	* src/dfsch.c (dfsch_new_frame, dfsch_lookup, dfsch_define,
	dfsch_set): Hash-table based environment frames 

	* src/hash.c (dfsch_hash_set_if_exists): Performance hack:
	hash-set-if-exists! 

	* src/native.c (native_form_let, native_form_letrec, 
	native_form_let_seq): All three variants of let, implemented using
	environment manipulation functions from dfsch.c
